# adk-mcp-rag

./: .gitignore  README.md  main.py  prepare_corpus_and_data_locally.py  pyproject.toml  requirements.txt  vector_db.py
agents/: __init__.py  agent.py
agents/config/: prompts.yml
agents/tools/: __init__.py  mcp_tools.py  prompts.py
docker/: .env.example  Dockerfile.qdrant  docker-compose.yml  example.env
local_vector_store/: prepare_corpus_and_data_locally.py  vector_db.py
