[project]
name = "adk-mcp-rag"
version = "0.1.0"
description = "Google ADK with Qdrant MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.3.0",
    "langchain>=0.3.15",
    "langchain-community>=0.3.20",
    "litellm>=1.72.6.post1",
    "pypdf>=5.4.0",
    "qdrant-client[fastembed-gpu]==1.13.3",
    "requests==2.32.3",
]
